# hack_and_beers_rag

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml  starting_notebook.ipynb
.devcontainer/: devcontainer.json
src/: chroma_db.py  openai.py  utils.py
worksheets/1_chunking/: chunking_worksheet.ipynb
worksheets/2_vector_embedding/: vector_embedding.ipynb
worksheets/3_data_poisoning/: data_poisoning_worksheet.ipynb
worksheets/4_final_exercise/: final_exercise.ipynb
worksheets/4_final_exercise/source_documents/: anya_petrova.md  chloe_dubois.md  clara_davies.md  isabel_morales.md  junho_park.md  kaelen_oconnell.md  maya_rodriguez_data_poisoning.md
worksheets/4_rag_assessment/: example_document.txt
worksheets/5_data_poisoning/: data_poisoning_worksheet.ipynb
worksheets/6_final_exercise/: final_exercise.ipynb
worksheets/6_final_exercise/source_documents/: david_miller.md  hiroshi_tanaka.md
worksheets/chunking/: chunking_worksheet.ipynb
worksheets/data_poisoning/: data_poisoning_worksheet.ipynb
worksheets/final_exercise/: final_exercise.ipynb
worksheets/final_exercise/source_documents/: alice_jones.md  ben_carter.md  elara_vance.md  finn_johansson.md  lena_popova.md  liam_doherty.md
worksheets/optional_rag_assessment/: rag_assessment_worksheet.ipynb
worksheets/optional_reranking/: reranking_worksheet.ipynb
worksheets/rag_assessment/: rag_assessment_worksheet.ipynb
worksheets/reranking/: reranking_worksheet.ipynb
worksheets/vector_embedding/: vector_embedding.ipynb
worksheets/vector_embedding/local_dbs/worksheet_vector_embedding/: chroma.sqlite3
