[project]
name = "vaia-rag-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "RushilDaya",email = "rushildayabme@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.40.20,<2.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "cohere (>=5.17.0,<6.0.0)",
    "ragas (==0.3.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "ipykernel (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
